--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <header>
     <div class="logo">
       <!-- small logo image (optional) -->
-      <img src="Tosca White Tech Twitter Header.png" alt="ZAIRUQ logo" onerror="this.style.display='none'">
+      <img src="https://zairuqdesignstudio.github.io/zairuqdesignstudio/logo.png" alt="ZAIRUQ Logo" style="height:40px;width:40px;border-radius:50%;">
       <span>ZAIRUQ Design Studio</span>
     </div>
 
