--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
   <header>
     <div class="logo">
       <!-- small logo image (optional) -->
-      <img src="https://zairuqdesignstudio.github.io/zairuqdesignstudio/logo.png" alt="ZAIRUQ Logo" style="height:40px;width:40px;border-radius:50%;">
+      <img src="https://zairuqdesignstudio.github.io/logo.png" alt="ZAIRUQ Logo" style="height:40px;width:40px;border-radius:50%;">
+      
       <span>ZAIRUQ Design Studio</span>
     </div>
 
