--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 <header>
   <div class="logo">
-    <img src="Green Modern Badge Gardening Logo Design.png" alt="ZAIRUQ Logo">
+    <img src="Logo.png" alt="ZAIRUQ Logo">
     <span>ZAIRUQ DESIGN STUDIO</span>
   </div>
   <nav>
