--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ZAIRUQ DESIGN STUDIO</title>
-  <link rel="icon" type="image/png" href="Green Modern Badge Gardening Logo Design.png">
+  <link rel="icon" type="image/png" href="logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a2d9b6f3e0.js" crossorigin="anonymous"></script>
   <style>
@@ -113,7 +113,7 @@
 
 <header>
   <div class="logo">
-    <img src="Logo.png" alt="ZAIRUQ Logo">
+    <img src="logo.png" alt="ZAIRUQ Logo">
     <span>ZAIRUQ DESIGN STUDIO</span>
   </div>
   <nav>
