--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 </section>
 
 <section class="about" id="about">
-  <img src="Green Modern Badge Gardening Logo Design.png" alt="ZAIRUQ Logo">
+  <img src="logo.png" alt="ZAIRUQ Logo">
   <h2>About ZAIRUQ DESIGN STUDIO</h2>
   <p>At ZAIRUQ DESIGN STUDIO, we believe every design tells a story. Our studio blends artistic creativity with modern printing technology to deliver results that not only look stunning but also leave a lasting impact. From digital artwork and business branding to customized printing on diverse materials — we bring your vision to life.</p>
   <p>Our dedicated team ensures that each project is handled with precision, innovation, and care. Whether you're a startup looking for a strong identity, a brand in need of promotional designs, or an individual seeking personalized prints — ZAIRUQ DESIGN STUDIO is your one-stop solution for creative excellence.</p>
