--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 <header>
   <div class="logo">
-  <img src="images/logo.png" alt="Zairuq Design Studio Logo">
+  <img src="logo.png" alt="Zairuq Design Studio Logo">
   <span><span class="white">ZAIRUQ</span> <span class="accent">DESIGN</span> <span class="white">STUDIO</span></span>
 </div>
   <nav>
