--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 </div>
 
 <section class="hero" id="hero">
-  <img src="Green Modern Badge Gardening Logo Design.png" alt="Logo">
+  <img src="logo.png" alt="Logo">
   <h1>Designs Born from Vision, Crafted with Soul</h1>
   <p>Innovate | Create | Visualize — Your Imagination, Our Design Expertise</p>
   <a href="https://wa.me/919978653852" target="_blank"><i class="fab fa-whatsapp"></i> Connect on WhatsApp</a>
