--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 </section>
 
 <section class="services" id="services">
-  <h2>Our Creative Services</h2>
+  <h3>OUR CREATIVE SERVICES</h3>
   <div class="service-grid">
     <div class="service-card">
       <i class="fas fa-id-card"></i>
@@ -195,9 +195,9 @@
 
 <section class="about" id="about">
   <img src="logo.png" alt="ZAIRUQ Logo">
-  <h2>About ZAIRUQ DESIGN STUDIO</h2>
-  <p>At ZAIRUQ DESIGN STUDIO, we believe every design tells a story. Our studio blends artistic creativity with modern printing technology to deliver results that not only look stunning but also leave a lasting impact. From digital artwork and business branding to customized printing on diverse materials — we bring your vision to life.</p>
-  <p>Our dedicated team ensures that each project is handled with precision, innovation, and care. Whether you're a startup looking for a strong identity, a brand in need of promotional designs, or an individual seeking personalized prints — ZAIRUQ DESIGN STUDIO is your one-stop solution for creative excellence.</p>
+  <h3>ABOUT ZAIRUQ DESIGN STUDIO</h3>
+  <p style="text-align: justify;">At ZAIRUQ DESIGN STUDIO, we believe every design tells a story. Our studio blends artistic creativity with modern printing technology to deliver results that not only look stunning but also leave a lasting impact. From digital artwork and business branding to customized printing on diverse materials — we bring your vision to life.</p>
+  <p style="text-align: justify;">Our dedicated team ensures that each project is handled with precision, innovation, and care. Whether you're a startup looking for a strong identity, a brand in need of promotional designs, or an individual seeking personalized prints — ZAIRUQ DESIGN STUDIO is your one-stop solution for creative excellence.</p>
 </section>
 
 <section class="contact" id="contact">
@@ -210,12 +210,25 @@
   </form>
 </section>
 
+<!-- Footer -->
 <footer>
   <p>&copy; <span id="year"></span> ZAIRUQ DESIGN STUDIO</p>
   <div class="socials">
-    <a href="https://instagram.com/zairuqdesignstudio" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://facebook.com/zairuqdesignstudio" target="_blank"><i class="fab fa-facebook"></i></a>
-    <a href="https://wa.me/919978653852" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://www.youtube.com/@yourchannel" target="_blank" aria-label="YouTube">
+      <i class="fab fa-youtube"></i>
+    </a>
+    <a href="https://instagram.com/zairuqdesignstudio" target="_blank" aria-label="Instagram">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://facebook.com/zairuqdesignstudio" target="_blank" aria-label="Facebook">
+      <i class="fab fa-facebook"></i>
+    </a>
+    <a href="https://linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
+      <i class="fab fa-linkedin"></i>
+    </a>
+    <a href="https://wa.me/919978653852" target="_blank" aria-label="WhatsApp">
+      <i class="fab fa-whatsapp"></i>
+    </a>
   </div>
 </footer>
 
