--- a/index.html
+++ b/index.html
@@ -45,6 +45,34 @@
     .logo .accent {
     color: var(--accent);
     }
+
+    footer {
+  background: #0d1a1f;
+  color: #fff;
+  padding: 25px 15px;
+  text-align: center;
+}
+footer .socials {
+  margin-top: 12px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 14px;
+}
+footer .socials a {
+  color: #fff;
+  font-size: 24px;
+  transition: 0.3s;
+}
+footer .socials a:hover {
+  color: #00b8c4;
+}
+@media (max-width: 600px) {
+  footer .socials a {
+    font-size: 28px;
+  }
+}
+
       nav a:hover {color: var(--accent);}
       .menu-toggle {display: none; font-size: 24px; color: #fff; background: none; border: none;}
 
