--- a/index.html
+++ b/index.html
@@ -188,39 +188,47 @@
   <div class="service-grid">
     <div class="service-card">
       <i class="fas fa-id-card"></i>
-      <h3>Visiting Card Printing with Materials</h3>
-      <p>Premium quality visiting cards with a wide range of finishes and textures for a lasting impression.</p>
+      <h3>Visiting Card / Business Card Printing with Materials</h3>
+      <p>Make your first impression count with our high-quality visiting and business card printing. Choose from premium materials, textures, and finishes that reflect your brand identity and professionalism.</p>
+  </div>
     </div>
     <div class="service-card">
       <i class="fas fa-sim-card"></i>
-      <h3>RFID & NFC Card Printing</h3>
-      <p>Smart, secure and stylish RFID & NFC card printing solutions for businesses and events.</p>
+      <h3>NFC Card Design and Printing</h3>
+      <p>Experience the future of smart networking! We design and print NFC-enabled business cards that instantly share your contact details or digital portfolio with just one tap.</p>
     </div>
     <div class="service-card">
       <i class="fas fa-pencil-ruler"></i>
       <h3>Logo & Poster Design</h3>
-      <p>Creative and memorable logos, posters, and brand visuals tailored to your business identity.</p>
+     <p>Bring your vision to life with unique, creative logo and poster designs. From minimal and modern to bold and artistic — we design visuals that speak your brand language.</p>
     </div>
     <div class="service-card">
       <i class="fas fa-video"></i>
       <h3>Reel Making Service</h3>
-      <p>Professional short video content creation for Instagram, Facebook, and digital promotions.</p>
+     <p>Boost your social media presence with eye-catching reels and promotional videos. Our team creates dynamic, trend-based visuals to help your brand stand out online.</p>
     </div>
     <div class="service-card">
       <i class="fas fa-sticky-note"></i>
-      <h3>Sticker Printing</h3>
-      <p>Durable, high-resolution stickers in multiple sizes and finishes for custom branding.</p>
+      <h3>All Type of Sticker Printing</h3>
+      <p>Get customized stickers for branding, packaging, or decoration. We offer waterproof, glossy, and matte finishes to suit every style and purpose.</p>
     </div>
     <div class="service-card">
       <i class="fas fa-paint-brush"></i>
-      <h3>Customized Printing</h3>
-      <p>Personalized printing on wood, glass, acrylic, mobile covers, keychains, pens, T-shirts & caps.</p>
+      <h3>Customized Printing (Wood, Glass, Acrylic, Mobile Covers, Keychains, Pens, T-Shirts & Caps)</h3>
+          <p>Turn ordinary items into personalized products. Perfect for gifts, branding, and events — printed with precision and long-lasting quality.</p>
     </div>
     <div class="service-card">
       <i class="fas fa-image"></i>
-      <h3>Canvas Banner Printing & Design</h3>
-      <p>Beautiful, large-format canvas printing with professional design for events and marketing.</p>
+      <h3>Canvas Banner Design and Printing/h3>
+      <p>Promote your events, shops, or brands with stunning canvas banners. Designed creatively and printed on premium materials for a bold visual impact.</p>
+  </div>
     </div>
+    <div class="service-card">
+      <i class="fas fa-image"></i>
+      <h3>I-Card Design & Printing for Schools, Colleges & Companies/h3>
+      <p>Professional ID cards designed and printed for educational institutions and corporate offices. Durable, stylish, and customized to match your brand or institute identity.</p>
+    </div>
+  
   </div>
 </section>
 
