--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   </div>
     </div>
     <div class="service-card">
-      <i class="fas fa-image"></i>
+      <i class="fas fa-id-card"></i>
       <h3>I-Card Design & Printing for Schools, Colleges & Companies/h3>
       <p>Professional ID cards designed and printed for educational institutions and corporate offices. Durable, stylish, and customized to match your brand or institute identity.</p>
     </div>
