--- a/index.html
+++ b/index.html
@@ -84,6 +84,31 @@
       }
 
 
+.service-section {
+  text-align: center;
+  padding: 40px 0;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+  margin-top: 20px;
+  padding: 0 20px;
+}
+
+.gallery img {
+  width: 100%;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+  transition: transform 0.3s;
+}
+
+.gallery img:hover {
+  transform: scale(1.05);
+}
+
+
 
       nav a:hover {color: var(--accent);}
       .menu-toggle {display: none; font-size: 24px; color: #fff; background: none; border: none;}
@@ -192,6 +217,26 @@
       <p>Make your first impression count with our high-quality visiting and business card printing. Choose from premium materials, textures, and finishes that reflect your brand identity and professionalism.</p>
   </div>
     </div>
+
+<section id="visiting-card" class="service-section">
+  <h2>Visiting Card Designs</h2>
+  <p>Explore our premium and creative visiting card designs tailored to your brand.</p>
+
+<section id="visiting-card" class="service-section">
+  <h2>Visiting Card Designs</h2>
+  <p>Explore our premium and creative visiting card designs tailored to your brand.</p>
+
+  <div class="gallery">
+    <img src="vc1.jpg" alt="Modern Visiting Card Design">
+    <img src="vc2.jpg" alt="QR Code Business Card">
+    <img src="vc3.jpg" alt="Minimal Design Card">
+    <img src="vc4.jpg" alt="Luxury Gold Finish Card">
+    <img src="vc5.jpg" alt="Corporate Design">
+    <img src="vc6.jpg" alt="Elegant Style">
+    <img src="vc7.jpg" alt="Creative Mockup">
+  </div>
+</section>
+
     <div class="service-card">
       <i class="fas fa-sim-card"></i>
       <h3>NFC Card Design and Printing</h3>
