--- a/index.html
+++ b/index.html
@@ -218,22 +218,17 @@
   </div>
     </div>
 
-<section id="visiting-card" class="service-section">
-  <h2>Visiting Card Designs</h2>
-  <p>Explore our premium and creative visiting card designs tailored to your brand.</p>
 
 <section id="visiting-card" class="service-section">
-  <h2>Visiting Card Designs</h2>
-  <p>Explore our premium and creative visiting card designs tailored to your brand.</p>
 
   <div class="gallery">
-    <img src="vc1.jpg" alt="Modern Visiting Card Design">
-    <img src="vc2.jpg" alt="QR Code Business Card">
-    <img src="vc3.jpg" alt="Minimal Design Card">
-    <img src="vc4.jpg" alt="Luxury Gold Finish Card">
-    <img src="vc5.jpg" alt="Corporate Design">
-    <img src="vc6.jpg" alt="Elegant Style">
-    <img src="vc7.jpg" alt="Creative Mockup">
+    <img src="vc1.png" alt="Modern Visiting Card Design">
+    <img src="vc2.png" alt="QR Code Business Card">
+    <img src="vc3.png" alt="Minimal Design Card">
+    <img src="vc4.png" alt="Luxury Gold Finish Card">
+    <img src="vc5.png" alt="Corporate Design">
+    <img src="vc6.png" alt="Elegant Style">
+    <img src="vc7.png" alt="Creative Mockup">
   </div>
 </section>
 
