--- a/index.html
+++ b/index.html
@@ -278,7 +278,21 @@
       <h3>NFC Card Design and Printing</h3>
       <p>Experience the future of smart networking! We design and print NFC-enabled business cards that instantly share your contact details or digital portfolio with just one tap.</p>
     </div>
-    <div class="service-card">
+<div class="slider-container">
+  <button class="slider-btn left" onclick="slide(this, -1)">‹</button>
+  <div class="slider">
+    <img src="nfc11.jpg" alt="">
+    <img src="nfc1.jpg" alt="">
+    <img src="nfc2.jpg" alt="">
+    <img src="nfc3.jpg" alt="">
+    <img src="nfc4.jpg" alt="">
+    <img src="nfc5.jpg" alt="">
+    <img src="nfc6.jpg" alt="">
+    <img src="nfc7.jpg" alt="">
+  </div>
+  <button class="slider-btn right" onclick="slide(this, 1)">›</button>
+</div>
+  <div class="service-card">
       <i class="fas fa-pencil-ruler"></i>
       <h3>Logo & Poster Design</h3>
      <p>Bring your vision to life with unique, creative logo and poster designs. From minimal and modern to bold and artistic — we design visuals that speak your brand language.</p>
