--- a/index.html
+++ b/index.html
@@ -278,20 +278,23 @@
       <h3>NFC Card Design and Printing</h3>
       <p>Experience the future of smart networking! We design and print NFC-enabled business cards that instantly share your contact details or digital portfolio with just one tap.</p>
     </div>
-<div class="slider-container">
-  <button class="slider-btn left" onclick="slide(this, -1)">‹</button>
-  <div class="slider">
-    <img src="nfc11.jpg" alt="">
-    <img src="nfc1.jpg" alt="">
-    <img src="nfc2.jpg" alt="">
-    <img src="nfc3.jpg" alt="">
-    <img src="nfc4.jpg" alt="">
-    <img src="nfc5.jpg" alt="">
-    <img src="nfc6.jpg" alt="">
-    <img src="nfc7.jpg" alt="">
+
+<section id="visiting-card">
+  <div class="carousel">
+    <div class="slides">
+      <img src="nfc11.jpg" alt="NFC 1">
+      <img src="nfc1.jpg" alt="NFC 2">
+      <img src="nfc2.jpg" alt="NFC 3">
+      <img src="nfc3.jpg" alt="NFC 4">
+      <img src="nfc4.jpg" alt="NFC 5">
+      <img src="nfc5.jpg" alt="NFC 6">
+      <img src="nfc6.jpg" alt="NFC 7">
+   </div>
+
+    <button class="prev">❮</button>
+    <button class="next">❯</button>
   </div>
-  <button class="slider-btn right" onclick="slide(this, 1)">›</button>
-</div>
+</section>
   <div class="service-card">
       <i class="fas fa-pencil-ruler"></i>
       <h3>Logo & Poster Design</h3>
