--- a/index.html
+++ b/index.html
@@ -1,270 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ZAIRUQ DESIGN STUDIO</title>
-  <link rel="icon" type="image/png" href="logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    * {box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', sans-serif;}
-    :root {
-      --primary: #00b8c4;
-      --dark: #0d1a1f;
-      --accent: #00e6f6;
-      --light: #f9f9f9;
+    *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
+    :root{
+      --primary:#00b8c4;
+      --dark:#0b1417;
+      --accent:#00e6f6;
+      --light:#f5f8f9;
     }
-    body {background: var(--light); color: var(--dark); line-height: 1.6;}
-
-    header {
-      position: fixed; top: 0; left: 0; right: 0; z-index: 1000;
-      background: var(--dark); color: #fff;
-      display: flex; align-items: center; justify-content: space-between;
-      padding: 10px 25px; box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+    body{background:var(--light);color:var(--dark);overflow-x:hidden;}
+    header{
+      background:var(--dark);
+      color:white;
+      padding:10px 20px;
+      position:fixed;top:0;left:0;right:0;z-index:1000;
+      display:flex;align-items:center;justify-content:space-between;
+      box-shadow:0 3px 10px rgba(0,0,0,0.3);
     }
-    .logo {display: flex; align-items: center; gap: 10px;}
-    .logo img {height: 40px; width: 40px; border-radius: 50%;}
-    .logo span {font-size: 17px; font-weight: 600; letter-spacing: 1px;}
-    .logo .white {color: #fff;}
-    .logo .accent {color: var(--accent);}
-    nav a {color: #fff; text-decoration: none; margin: 0 10px; font-weight: 500;}
-    nav a:hover {color: var(--accent);}
-    .menu-toggle {display: none; font-size: 24px; color: #fff; background: none; border: none;}
-
-    .hero {
-      background: linear-gradient(135deg, #0f1f24, #14363d);
-      color: #fff; padding: 120px 20px 80px; text-align: center;
+    .logo{display:flex;align-items:center;gap:10px;}
+    .logo img{height:40px;width:40px;border-radius:50%;}
+    .logo span{font-size:18px;font-weight:600;}
+    .logo .accent{color:var(--accent);}
+    nav a{color:white;text-decoration:none;margin:0 8px;font-weight:500;}
+    nav a:hover{color:var(--accent);}
+    .hero{
+      margin-top:70px;
+      background:linear-gradient(135deg,#07252d,#103840);
+      color:white;
+      text-align:center;
+      padding:80px 20px;
     }
-    .hero h2 {font-size: 26px; color: var(--accent); margin-bottom: 10px;}
-    .hero p {font-size: 16px; color: #cce7ea; margin-bottom: 20px;}
-    .hero a {
-      background: var(--accent); color: #fff; padding: 10px 20px; border-radius: 6px;
-      text-decoration: none; font-weight: 600; transition: 0.3s;
+    .hero h1{font-size:28px;color:var(--accent);margin-bottom:10px;}
+    .hero p{color:#d1e3e5;margin-bottom:20px;}
+    .hero a{
+      background:var(--accent);color:#fff;text-decoration:none;
+      padding:10px 22px;border-radius:6px;font-weight:600;transition:0.3s;
     }
-    .hero a:hover {background: var(--primary);}
-
-    .services {background: #fff; padding: 80px 20px; text-align: center;}
-    .services h3 {font-size: 30px; margin-bottom: 20px; color: var(--dark);}
-    .service-card {
-      background: var(--light); padding: 25px; border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      margin-bottom: 30px; max-width: 1000px; margin-inline: auto;
+    .hero a:hover{background:var(--primary);}
+    /* SERVICES SECTION */
+    .services{
+      padding:60px 15px;
+      background:#fff;
+      text-align:center;
     }
-    .service-card i {font-size: 30px; color: var(--primary); margin-bottom: 10px;}
-    .service-card h3 {font-size: 18px; margin-bottom: 8px;}
-    .service-card p {font-size: 15px; color: #555;}
-
-    /* Common Slider CSS */
-    .slider-container {
-      position: relative;
-      width: 100%;
-      overflow: hidden;
-      margin: 20px auto;
+    .services h2{font-size:28px;margin-bottom:30px;color:var(--dark);}
+    .service-card{
+      background:rgba(255,255,255,0.8);
+      backdrop-filter:blur(8px);
+      border-radius:15px;
+      box-shadow:0 5px 15px rgba(0,0,0,0.1);
+      margin:0 auto 50px;
+      max-width:1000px;
+      padding:25px;
+      transition:0.3s;
     }
-    .slider {
-      display: flex;
-      overflow-x: auto;
-      scroll-behavior: smooth;
-      gap: 10px;
-      padding: 10px;
-      scroll-snap-type: x mandatory;
-      -webkit-overflow-scrolling: touch;
+    .service-card:hover{transform:translateY(-5px);box-shadow:0 8px 20px rgba(0,0,0,0.2);}
+    .service-card i{font-size:30px;color:var(--accent);margin-bottom:8px;}
+    .service-card h3{font-size:20px;margin-bottom:5px;}
+    .service-card p{font-size:15px;color:#555;margin-bottom:10px;}
+    /* SLIDER */
+    .slider-container{
+      position:relative;
+      overflow:hidden;
+      margin-top:15px;
     }
-    .slider img {
-      width: 280px;
-      height: auto;
-      border-radius: 10px;
-      flex-shrink: 0;
-      scroll-snap-align: center;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    .slider{
+      display:flex;
+      overflow-x:auto;
+      gap:12px;
+      scroll-behavior:smooth;
+      padding:8px;
+      scroll-snap-type:x mandatory;
+      -webkit-overflow-scrolling:touch;
     }
-    .slider::-webkit-scrollbar {display: none;}
-    .slider-btn {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: rgba(0,0,0,0.5);
-      color: white;
-      border: none;
-      border-radius: 50%;
-      padding: 6px 10px;
-      font-size: 18px;
-      cursor: pointer;
-      z-index: 10;
+    .slider img{
+      width:280px;
+      border-radius:12px;
+      flex-shrink:0;
+      scroll-snap-align:center;
+      box-shadow:0 4px 10px rgba(0,0,0,0.3);
+      transition:transform 0.3s;
     }
-    .slider-btn.left {left: 10px;}
-    .slider-btn.right {right: 10px;}
-
-    footer {
-      background: var(--dark); color: #fff; padding: 25px 15px; text-align: center;
+    .slider img:hover{transform:scale(1.05);}
+    .slider::-webkit-scrollbar{display:none;}
+    .slider-btn{
+      position:absolute;
+      top:50%;
+      transform:translateY(-50%);
+      background:rgba(0,0,0,0.5);
+      color:white;
+      border:none;
+      border-radius:50%;
+      font-size:18px;
+      padding:6px 10px;
+      cursor:pointer;
+      z-index:10;
     }
-    footer .socials {
-      margin-top: 15px; display: flex; justify-content: center; flex-wrap: wrap; gap: 18px;
+    .slider-btn.left{left:10px;}
+    .slider-btn.right{right:10px;}
+    /* FOOTER */
+    footer{
+      background:var(--dark);
+      color:white;
+      text-align:center;
+      padding:25px 15px;
+      margin-top:40px;
     }
-    footer .socials a {color: #fff; font-size: 26px; transition: 0.3s;}
-    footer .socials a:hover {color: var(--accent);}
+    footer .socials{
+      margin-top:12px;
+      display:flex;
+      justify-content:center;
+      gap:18px;
+    }
+    footer .socials a{color:white;font-size:24px;transition:0.3s;}
+    footer .socials a:hover{color:var(--accent);}
+    /* RESPONSIVE */
+    @media(max-width:768px){
+      header{flex-wrap:wrap;text-align:center;}
+      nav{width:100%;margin-top:8px;}
+      nav a{display:inline-block;margin:5px 10px;}
+      .slider img{width:230px;}
+    }
   </style>
 </head>
 <body>
-
-<header>
-  <div class="logo">
-    <img src="logo.png" alt="Logo">
-    <span><span class="white">ZAIRUQ</span> <span class="accent">DESIGN</span> <span class="white">STUDIO</span></span>
-  </div>
-  <nav>
-    <a href="#hero">Home</a>
-    <a href="#services">Services</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
-
-<section class="hero" id="hero">
-  <h2>Designs Born from Vision, Crafted with Soul</h2>
-  <p>Innovate | Create | Visualize — Your Imagination, Our Design Expertise</p>
-  <a href="https://wa.me/919978653852" target="_blank"><i class="fab fa-whatsapp"></i> Connect on WhatsApp</a>
-</section>
-
-<section class="services" id="services">
-  <h3>OUR CREATIVE SERVICES</h3>
-
-  <!-- Each Service Card + Slider -->
-  <div class="service-card">
-    <i class="fas fa-id-card"></i>
-    <h3>Visiting Card / Business Card</h3>
-    <p>Make your first impression count...</p>
-    <div class="slider-container">
-      <button class="slider-btn left" onclick="slide(this,-1)">‹</button>
-      <div class="slider">
-        <img src="vc1.jpg"><img src="vc2.jpg"><img src="vc3.jpg"><img src="vc4.jpg">
-        <img src="vc5.jpg"><img src="vc6.jpg"><img src="vc7.jpg"><img src="vc8.jpg">
-      </div>
-      <button class="slider-btn right" onclick="slide(this,1)">›</button>
+  <header>
+    <div class="logo">
+      <img src="logo.png" alt="logo">
+      <span><span class="accent">ZAIRUQ</span> DESIGN STUDIO</span>
     </div>
-  </div>
+    <nav>
+      <a href="#hero">Home</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-  <div class="service-card">
-    <i class="fas fa-sim-card"></i>
-    <h3>NFC Card Design & Printing</h3>
-    <p>Experience the future of smart networking...</p>
-    <div class="slider-container">
-      <button class="slider-btn left" onclick="slide(this,-1)">‹</button>
-      <div class="slider">
-        <img src="nfc1.jpg"><img src="nfc2.jpg"><img src="nfc3.jpg"><img src="nfc4.jpg">
-        <img src="nfc5.jpg"><img src="nfc6.jpg"><img src="nfc7.jpg"><img src="nfc8.jpg">
+  <section class="hero" id="hero">
+    <h1>Designs Born from Vision, Crafted with Soul</h1>
+    <p>Innovate | Create | Visualize — Your Imagination, Our Design Expertise</p>
+    <a href="https://wa.me/919978653852" target="_blank"><i class="fab fa-whatsapp"></i> Connect Now</a>
+  </section>
+
+  <section class="services" id="services">
+    <h2>Our Creative Services</h2>
+
+    <div class="service-card">
+      <i class="fas fa-id-card"></i>
+      <h3>Visiting Card / Business Card</h3>
+      <p>Make your first impression count with stunning designs.</p>
+      <div class="slider-container">
+        <button class="slider-btn left" onclick="slide(this,-1)">‹</button>
+        <div class="slider auto-scroll">
+          <img src="vc7.png"><img src="vc2.png"><img src="vc3.png"><img src="vc4.png">
+          <img src="vc5.png"><img src="vc6.jpg"><img src="vc7.png">
+        </div>
+        <button class="slider-btn right" onclick="slide(this,1)">›</button>
       </div>
-      <button class="slider-btn right" onclick="slide(this,1)">›</button>
     </div>
-  </div>
 
-  <div class="service-card">
-    <i class="fas fa-pencil-ruler"></i>
-    <h3>Logo & Poster Design</h3>
-    <p>Bring your vision to life...</p>
-    <div class="slider-container">
-      <button class="slider-btn left" onclick="slide(this,-1)">‹</button>
-      <div class="slider">
-        <img src="logo1.jpg"><img src="logo2.jpg"><img src="logo3.jpg"><img src="logo4.jpg">
-        <img src="logo5.jpg"><img src="logo6.jpg"><img src="logo7.jpg"><img src="logo8.jpg">
+    <div class="service-card">
+      <i class="fas fa-sim-card"></i>
+      <h3>NFC Card Design & Printing</h3>
+      <p>Tap into the future of networking with smart NFC cards.</p>
+      <div class="slider-container">
+        <button class="slider-btn left" onclick="slide(this,-1)">‹</button>
+        <div class="slider auto-scroll">
+          <img src="nfc1.jpg"><img src="nfc2.jpg"><img src="nfc3.jpg"><img src="nfc4.jpg">
+          <img src="nfc5.jpg"><img src="nfc6.jpg"><img src="nfc7.jpg"><img src="nfc8.jpg">
+        </div>
+        <button class="slider-btn right" onclick="slide(this,1)">›</button>
       </div>
-      <button class="slider-btn right" onclick="slide(this,1)">›</button>
     </div>
-  </div>
 
-  <div class="service-card">
-    <i class="fas fa-video"></i>
-    <h3>Reel Making Service</h3>
-    <p>Boost your social presence...</p>
-    <div class="slider-container">
-      <button class="slider-btn left" onclick="slide(this,-1)">‹</button>
-      <div class="slider">
-        <img src="reel1.jpg"><img src="reel2.jpg"><img src="reel3.jpg"><img src="reel4.jpg">
-        <img src="reel5.jpg"><img src="reel6.jpg"><img src="reel7.jpg"><img src="reel8.jpg">
-      </div>
-      <button class="slider-btn right" onclick="slide(this,1)">›</button>
+  </section>
+
+  <footer>
+    <p>&copy; <span id="year"></span> ZAIRUQ DESIGN STUDIO</p>
+    <div class="socials">
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+      <a href="#"><i class="fab fa-whatsapp"></i></a>
     </div>
-  </div>
+  </footer>
 
-  <div class="service-card">
-    <i class="fas fa-sticky-note"></i>
-    <h3>Sticker Printing</h3>
-    <p>Get customized stickers for branding...</p>
-    <div class="slider-container">
-      <button class="slider-btn left" onclick="slide(this,-1)">‹</button>
-      <div class="slider">
-        <img src="sticker1.jpg"><img src="sticker2.jpg"><img src="sticker3.jpg"><img src="sticker4.jpg">
-        <img src="sticker5.jpg"><img src="sticker6.jpg"><img src="sticker7.jpg"><img src="sticker8.jpg">
-      </div>
-      <button class="slider-btn right" onclick="slide(this,1)">›</button>
-    </div>
-  </div>
+  <script>
+    document.getElementById("year").textContent=new Date().getFullYear();
 
-  <div class="service-card">
-    <i class="fas fa-paint-brush"></i>
-    <h3>Customized Printing</h3>
-    <p>Turn ordinary items into personalized products...</p>
-    <div class="slider-container">
-      <button class="slider-btn left" onclick="slide(this,-1)">‹</button>
-      <div class="slider">
-        <img src="custom1.jpg"><img src="custom2.jpg"><img src="custom3.jpg"><img src="custom4.jpg">
-        <img src="custom5.jpg"><img src="custom6.jpg"><img src="custom7.jpg"><img src="custom8.jpg">
-      </div>
-      <button class="slider-btn right" onclick="slide(this,1)">›</button>
-    </div>
-  </div>
+    function slide(btn,direction){
+      const slider=btn.parentElement.querySelector('.slider');
+      const scrollAmount=300;
+      slider.scrollBy({left:scrollAmount*direction,behavior:'smooth'});
+    }
 
-  <div class="service-card">
-    <i class="fas fa-image"></i>
-    <h3>Canvas Banner Design</h3>
-    <p>Promote your events and shops...</p>
-    <div class="slider-container">
-      <button class="slider-btn left" onclick="slide(this,-1)">‹</button>
-      <div class="slider">
-        <img src="banner1.jpg"><img src="banner2.jpg"><img src="banner3.jpg"><img src="banner4.jpg">
-        <img src="banner5.jpg"><img src="banner6.jpg"><img src="banner7.jpg"><img src="banner8.jpg">
-      </div>
-      <button class="slider-btn right" onclick="slide(this,1)">›</button>
-    </div>
-  </div>
-
-  <div class="service-card">
-    <i class="fas fa-id-card-clip"></i>
-    <h3>ID Card Design & Printing</h3>
-    <p>Professional ID cards for schools and companies...</p>
-    <div class="slider-container">
-      <button class="slider-btn left" onclick="slide(this,-1)">‹</button>
-      <div class="slider">
-        <img src="id1.jpg"><img src="id2.jpg"><img src="id3.jpg"><img src="id4.jpg">
-        <img src="id5.jpg"><img src="id6.jpg"><img src="id7.jpg"><img src="id8.jpg">
-      </div>
-      <button class="slider-btn right" onclick="slide(this,1)">›</button>
-    </div>
-  </div>
-
-</section>
-
-<footer>
-  <p>&copy; <span id="year"></span> ZAIRUQ DESIGN STUDIO</p>
-  <div class="socials">
-    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-  </div>
-</footer>
-
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
-
-  // Scroll buttons shared for all sliders
-  function slide(btn, direction) {
-    const container = btn.parentElement.querySelector('.slider');
-    const scrollAmount = 300;
-    container.scrollBy({ left: scrollAmount * direction, behavior: 'smooth' });
-  }
-</script>
-
+    // AUTO SCROLL
+    document.querySelectorAll('.auto-scroll').forEach(slider=>{
+      let scrollDir=1;
+      setInterval(()=>{
+        slider.scrollBy({left:2*scrollDir});
+        if(slider.scrollLeft+slider.clientWidth>=slider.scrollWidth||slider.scrollLeft<=0)
+          scrollDir*=-1;
+      },20);
+    });
+  </script>
 </body>
 </html>
