--- a/index.html
+++ b/index.html
@@ -267,30 +267,34 @@
 <!-- About -->
 <section class="about">
 <h2>About Us</h2>
-<p>At <b>Zairuq Design Studio</b>, we specialize in creative designing & high-quality printing solutions. From visiting cards & NFC cards to customized merchandise & professional logo designs, we bring your ideas to life with precision, creativity, & style.</p>
+<p>At <b-justify>Zairuq Design Studio</b>, we specialize in creative designing & high-quality printing solutions. From visiting cards & NFC cards to customized merchandise & professional logo designs, we bring your ideas to life with precision, creativity, & style.</p>
 </section>
 
 <!-- Contact -->
 <section class="contact">
 <h2>Contact Us</h2>
 <p>📞 <b>Call / WhatsApp:</b> +91 9978653852</p>
-<p>📧 <b>Email:</b> yesfashionhub@gmail.com</p>
+<p>📧 <b>Email:</b>zairuqdesignstudio@gmail.com</p>
 <p>📍 <b>Address:</b> Available on Request</p>
 <a href="https://wa.me/919978653852" target="_blank" class="whatsapp-btn">Chat on WhatsApp</a>
 </section>
 
-!-- ======================= Footer ======================= -->
 <footer>
-    <p>&copy; ZAIRUQ DESIGN STUDIO</p>
-    <p>
-        <a href="https://youtube.com/@yourchannel">YouTube</a>
-        <a href="https://instagram.com/zairuqdesignstudio">Instagram</a>
-        <a href="https://facebook.com/zairuqdesignstudio">Facebook</a>
-        <a href="https://linkedin.com/in/yourprofile">LinkedIn</a>
-        <a href="https://wa.me/919978653852">WhatsApp</a>
-    </p>
-</footer>
+  <p>&copy; <span id="year"></span> ZAIRUQ DESIGN STUDIO</p>
+  <div class="socials">
 
+<a href="https://youtube.com/@yourchannel"><i class="fa-brands fa-youtube"></i></a>
+
+<a href="https://instagram.com/zairuqdesignstudio"><i class="fa-brands fa-instagram"></i></a>
+
+<a href="https://facebook.com/zairuqdesignstudio"><i class="fa-brands fa-facebook"></i></a>
+
+<a href="https://linkedin.com/in/yourprofile"><i class="fa-brands fa-linkedin"></i></a>
+
+<a href="https://wa.me/919978653852"><i class="fa-brands fa-whatsapp"></i></a>
+
+</div>
+</footer>
 
 <script>
 // Universal slider function
