--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
     margin-top: 40px;
   }
 </style>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
 
@@ -281,20 +284,27 @@
 
 <footer>
   <p>&copy; <span id="year"></span> ZAIRUQ DESIGN STUDIO</p>
+
   <div class="socials">
-
-<a href="https://youtube.com/@yourchannel"><i class="fa-brands fa-youtube"></i></a>
-
-<a href="https://instagram.com/zairuqdesignstudio"><i class="fa-brands fa-instagram"></i></a>
-
-<a href="https://facebook.com/zairuqdesignstudio"><i class="fa-brands fa-facebook"></i></a>
-
-<a href="https://linkedin.com/in/yourprofile"><i class="fa-brands fa-linkedin"></i></a>
-
-<a href="https://wa.me/919978653852"><i class="fa-brands fa-whatsapp"></i></a>
-
-</div>
+    <a href="https://www.youtube.com/@yourchannel" target="_blank" aria-label="YouTube">
+      <i class="fa-brands fa-youtube"></i>
+    </a>
+    <a href="https://instagram.com/zairuqdesignstudio" target="_blank" aria-label="Instagram">
+      <i class="fa-brands fa-instagram"></i>
+    </a>
+    <a href="https://facebook.com/zairuqdesignstudio" target="_blank" aria-label="Facebook">
+      <i class="fa-brands fa-facebook"></i>
+    </a>
+    <a href="https://linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
+      <i class="fa-brands fa-linkedin"></i>
+    </a>
+    <a href="https://wa.me/919978653852" target="_blank" aria-label="WhatsApp">
+      <i class="fa-brands fa-whatsapp"></i>
+    </a>
+  </div>
 </footer>
+
+
 
 <script>
 // Universal slider function
