--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@ footer .socials a:hover {
     <p>Creative, modern, and memorable logo designs that tell your story.</p>
     <div class="slider" id="slider3">
       <div class="slides">
-        <img src="logo1.jpg">
-        <img src="logo2.jpg">
-        <img src="logo3.jpg">
-        <img src="logo4.jpg">
-        <img src="logo5.jpg">
-        <img src="logo6.jpg">
-        <img src="logo7.jpg">
+        <img src="logo11.png">
+        <img src="logo2.png">
+        <img src="logo3.png">
+        <img src="logo4.png">
+        <img src="logo1.png">
+        <img src="logo6.png">
+        <img src="logo7.png">
       </div>
     </div>
   </div>
