--- a/index.html
+++ b/index.html
@@ -232,24 +232,6 @@ footer .socials a:hover {
     </div>
   </div>
 
-  <!-- 4️⃣ Reel Making -->
-  <div class="service-card">
-<div class="price-label">Start with Just ₹99 Only</div>
- <i class="fas fa-id-card"></i>
-    <h3>Reel Making Service</h3>
-    <p>Social media ready reels that grab attention and grow your reach.</p>
-    <div class="slider" id="slider4">
-      <div class="slides">
-        <img src="reel1.jpg">
-        <img src="reel2.jpg">
-        <img src="reel3.jpg">
-        <img src="reel4.jpg">
-        <img src="reel5.jpg">
-        <img src="reel6.jpg">
-        <img src="reel7.jpg">
-      </div>
-    </div>
-  </div>
 
   <!-- 5️⃣ Sticker Printing -->
   <div class="service-card">
@@ -259,13 +241,13 @@ footer .socials a:hover {
     <p>Glossy, matte, waterproof — stickers that make your brand pop.</p>
     <div class="slider" id="slider5">
       <div class="slides">
-        <img src="sticker1.jpg">
-        <img src="sticker2.jpg">
-        <img src="sticker3.jpg">
-        <img src="sticker4.jpg">
-        <img src="sticker5.jpg">
-        <img src="sticker6.jpg">
-        <img src="sticker7.jpg">
+        <img src="sticker1.png">
+        <img src="sticker2.png">
+        <img src="sticker3.png">
+        <img src="sticker4.png">
+        <img src="sticker5.png">
+        <img src="sticker6.png">
+        <img src="sticker7.png">
       </div>
     </div>
   </div>
