--- a/index.html
+++ b/index.html
@@ -241,13 +241,13 @@ footer .socials a:hover {
     <p>Glossy, matte, waterproof — stickers that make your brand pop.</p>
     <div class="slider" id="slider5">
       <div class="slides">
-        <img src="sticker1.png">
-        <img src="sticker2.png">
-        <img src="sticker3.png">
-        <img src="sticker4.png">
-        <img src="sticker5.png">
-        <img src="sticker6.png">
-        <img src="sticker7.png">
+        <img src="stiker1.png">
+        <img src="stiker2.png">
+        <img src="stiker3.png">
+        <img src="stiker4.png">
+        <img src="stiker5.png">
+        <img src="stiker6.png">
+        <img src="stiker7.png">
       </div>
     </div>
   </div>
