--- a/index.html
+++ b/index.html
@@ -94,11 +94,12 @@
     transform: scale(1.05);
   }
 
-  @media (max-width: 768px) {
-    .slides img {
-      max-width: 80%;
-    }
+  @media (max-width: 700px) {
+  .slides img {
+    width: 120px;
+    height: 120px;
   }
+}
 
  footer {
   background: #0d1a1f;
