--- a/index.html
+++ b/index.html
@@ -261,13 +261,12 @@ footer .socials a:hover {
     <p>Wood, glass, acrylic & more — personalized designs for every need.</p>
     <div class="slider" id="slider6">
       <div class="slides">
-        <img src="custom1.jpg">
-        <img src="custom2.jpg">
-        <img src="custom3.jpg">
-        <img src="custom4.jpg">
-        <img src="custom5.jpg">
-        <img src="custom6.jpg">
-        <img src="custom7.jpg">
+        <img src="c1.jpg">
+        <img src="c2.jpg">
+        <img src="c3.jpg">
+        <img src="c4.jpg">
+        <img src="c5.jpg">
+        <img src="c6.jpg">
       </div>
     </div>
   </div>
@@ -278,7 +277,7 @@ footer .socials a:hover {
 <div class="price-label">Start with Just ₹199 Only</div>
  <i class="fas fa-id-card"></i>
 
-    <h3>Canvas Banner Design & Printing</h3>
+    <h3>Posters - Canvas Banner Design & Printing</h3>
     <p>Bold, beautiful banners designed for impact and visibility.</p>
     <div class="slider" id="slider7">
       <div class="slides">
