--- a/index.html
+++ b/index.html
@@ -281,13 +281,14 @@ footer .socials a:hover {
     <p>Bold, beautiful banners designed for impact and visibility.</p>
     <div class="slider" id="slider7">
       <div class="slides">
-        <img src="banner1.jpg">
-        <img src="banner2.jpg">
-        <img src="banner3.jpg">
-        <img src="banner4.jpg">
-        <img src="banner5.jpg">
-        <img src="banner6.jpg">
-        <img src="banner7.jpg">
+        <img src="p1.png">
+        <img src="p2.png">
+        <img src="p3.png">
+        <img src="p4.png">
+        <img src="p5.png">
+        <img src="p6.png">
+        <img src="p7.png">
+        <img src="p8.png">
       </div>
     </div>
   </div>
