--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ footer .socials a:hover {
 <body>
 
 <header>
-  <h1>ZAIRUQ DESIGN STUDIO</h1>
+  <h2>ZAIRUQ DESIGN STUDIO</h2>
   <p>Designs Born from Vision, Crafted with Soul</p>
 </header>
 
@@ -200,7 +200,7 @@ footer .socials a:hover {
  <div class="price-label">Start with Just ₹199 Only</div>
   <i class="fas fa-id-card"></i>
  <h3>NFC Card Design and Printing</h3>
-    <p>Tap & connect instantly — smart NFC cards for digital sharing.</p>
+    <p>Tap & connect instantly — smart NFC cards for digital sharing With QR Code and Webpage</p>
     <div class="slider" id="slider2">
       <div class="slides">
         <img src="nfc11.jpg">
@@ -301,13 +301,13 @@ footer .socials a:hover {
     <p>Durable and stylish ID cards for schools, colleges, and companies.</p>
     <div class="slider" id="slider8">
       <div class="slides">
-        <img src="icard1.jpg">
-        <img src="icard2.jpg">
-        <img src="icard3.jpg">
-        <img src="icard4.jpg">
-        <img src="icard5.jpg">
-        <img src="icard6.jpg">
-        <img src="icard7.jpg">
+        <img src="i11.jpg">
+        <img src="i22.jpg">
+        <img src="i3.jpg">
+        <img src="i4.jpg">
+        <img src="i5.jpg">
+        <img src="i1.jpg">
+        <img src="i2.jpg">
       </div>
     </div>
   </div>
@@ -317,7 +317,7 @@ footer .socials a:hover {
 <!-- About -->
 <section class="about">
 <h2>About Us</h2>
-<p>At <b-justify>Zairuq Design Studio</b>, we specialize in creative designing & high-quality printing solutions. From visiting cards & NFC cards to customized merchandise & professional logo designs, we bring your ideas to life with precision, creativity, & style.</p>
+<p>At <b-justify>ZAIRUQ Design Studio</b>, we specialize in creative designing & high-quality printing solutions. From visiting cards & NFC cards to customized merchandise & professional logo designs, we bring your ideas to life with precision, creativity, & style.</p>
 </section>
 
 <!-- Contact -->
