--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ footer .socials a:hover {
   <!-- 2️⃣ NFC Card -->
   <div class="service-card">
  <div class="price-label">Start with Just ₹199 Only</div>
-  <i class="fas fa-id-card"></i>
+  <i class="fas fa-wave-square"></i>
  <h3>NFC Card Design and Printing</h3>
     <p>Tap & connect instantly — smart NFC cards for digital sharing With QR Code and Webpage</p>
     <div class="slider" id="slider2">
@@ -217,7 +217,7 @@ footer .socials a:hover {
   <!-- 3️⃣ Logo Design -->
   <div class="service-card">
 <div class="price-label">Start with Just ₹99 Only</div>
- <i class="fas fa-id-card"></i>
+ <i class="fas fa-palette"></i>
     <h3>Logo & Poster Design</h3>
     <p>Creative, modern, and memorable logo designs that tell your story.</p>
     <div class="slider" id="slider3">
@@ -237,7 +237,7 @@ footer .socials a:hover {
   <!-- 5️⃣ Sticker Printing -->
   <div class="service-card">
 <div class="price-label">Start with Just ₹99 Only</div>
- <i class="fas fa-id-card"></i>
+ <i class="fas fa-tag"></i>
     <h3>All Type of Sticker Printing</h3>
     <p>Glossy, matte, waterproof — stickers that make your brand pop.</p>
     <div class="slider" id="slider5">
@@ -256,7 +256,7 @@ footer .socials a:hover {
   <!-- 6️⃣ Customized Printing -->
   <div class="service-card">
 <div class="price-label">Start with Just ₹199 Only</div>
- <i class="fas fa-id-card"></i>
+ <i class="fas fa-image"></i>
     <h3>Customized Printing</h3>
     <p>Wood, glass, acrylic & more — personalized designs for every need.</p>
     <div class="slider" id="slider6">
@@ -275,7 +275,7 @@ footer .socials a:hover {
   <div class="service-card">
 
 <div class="price-label">Start with Just ₹199 Only</div>
- <i class="fas fa-id-card"></i>
+ <i class="fas fa-image"></i>
 
     <h3>Posters - Canvas Banner Design & Printing</h3>
     <p>Bold, beautiful banners designed for impact and visibility.</p>
@@ -296,7 +296,7 @@ footer .socials a:hover {
   <!-- 8️⃣ I-Card Design -->
   <div class="service-card">
 <div class="price-label">Start with Just ₹49 Only</div>
- <i class="fas fa-id-card"></i>
+ <i class="fas fa-id-badge"></i>
     <h3>I-Card Design & Printing</h3>
     <p>Durable and stylish ID cards for schools, colleges, and companies.</p>
     <div class="slider" id="slider8">
