--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@ footer .socials a:hover {
 </header>
 
 <nav>
-  <a href="#">Home</a>
-  <a href="#">Services</a>
-  <a href="#">About</a>
-  <a href="#">Contact</a>
+  <a href="#hero">Home</a>
+  <a href="#services">Services</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
 </nav>
 
-<section>
+<section class="services">
   <h2>OUR CREATIVE SERVICES</h2>
 
   <!-- 1️⃣ Visiting Card -->
@@ -232,7 +232,6 @@ footer .socials a:hover {
       </div>
     </div>
   </div>
-
 
   <!-- 5️⃣ Sticker Printing -->
   <div class="service-card">
