--- a/index.html
+++ b/index.html
@@ -161,19 +161,21 @@ footer .socials a:hover {
 </head>
 <body>
 
+
+<section id="home">
 <header>
   <h2>ZAIRUQ DESIGN STUDIO</h2>
   <p>Designs Born from Vision, Crafted with Soul</p>
 </header>
 
 <nav>
-  <a href="#hero">Home</a>
+  <a href="#home">Home</a>
   <a href="#services">Services</a>
   <a href="#about">About</a>
   <a href="#contact">Contact</a>
 </nav>
 
-<section class="services">
+<section id="services">
   <h2>OUR CREATIVE SERVICES</h2>
 
   <!-- 1️⃣ Visiting Card -->
@@ -314,13 +316,13 @@ footer .socials a:hover {
 
 
 <!-- About -->
-<section class="about">
+<section id="about">
 <h2>About Us</h2>
 <p>At <b-justify>ZAIRUQ Design Studio</b>, we specialize in creative designing & high-quality printing solutions. From visiting cards & NFC cards to customized merchandise & professional logo designs, we bring your ideas to life with precision, creativity, & style.</p>
 </section>
 
 <!-- Contact -->
-<section class="contact">
+<section id="contact">
 <h2>Contact Us</h2>
 <p>📞 <b>Call / WhatsApp:</b> +91 9978653852</p>
 <p>📧 <b>Email:</b>zairuqdesignstudio@gmail.com</p>
