--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@ footer .socials a:hover {
   <a href="#contact">Contact</a>
 </nav>
 
+</section>
+
 <section id="services">
   <h2>OUR CREATIVE SERVICES</h2>
 
