--- a/index.html
+++ b/index.html
@@ -161,8 +161,6 @@ footer .socials a:hover {
 </head>
 <body>
 
-
-<section id="home">
 <header>
   <h2>ZAIRUQ DESIGN STUDIO</h2>
   <p>Designs Born from Vision, Crafted with Soul</p>
@@ -175,6 +173,12 @@ footer .socials a:hover {
   <a href="#contact">Contact</a>
 </nav>
 
+
+<section id="home">
+<p style="text-align:center;">
+ <a href="https://wa.me/9978653852"
+style="color:#f39c12;
+text-decoration:none;">Connect on Whatsapp</a></p>
 </section>
 
 <section id="services">
