--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ text-decoration:none;">Connect on Whatsapp</a></p>
   <p>&copy; <span id="year"></span> ZAIRUQ DESIGN STUDIO</p>
 
   <div class="socials">
-    <a href="https://www.youtube.com/@yourchannel" target="_blank" aria-label="YouTube">
+    <a href="https://www.youtube.com/@zairuqdesignstudio" target="_blank" aria-label="YouTube">
       <i class="fa-brands fa-youtube"></i>
     </a>
     <a href="https://instagram.com/zairuqdesignstudio" target="_blank" aria-label="Instagram">
@@ -349,7 +349,7 @@ text-decoration:none;">Connect on Whatsapp</a></p>
     <a href="https://facebook.com/zairuqdesignstudio" target="_blank" aria-label="Facebook">
       <i class="fa-brands fa-facebook"></i>
     </a>
-    <a href="https://linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
+    <a href="https://linkedin.com/in/zairuqdesignstudio" target="_blank" aria-label="LinkedIn">
       <i class="fa-brands fa-linkedin"></i>
     </a>
     <a href="https://wa.me/919978653852" target="_blank" aria-label="WhatsApp">
