--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
   }
 
   header {
-    background: #111;
-    color: white;
-    text-align: center;
-    padding: 20px;
-  }
+  background: linear-gradient(135deg, #000, #222);
+  color: gold;
+  text-align: center;
+  padding: 30px 20px;
+  box-shadow: 0 2px 10px rgba(255,215,0,0.3);
+  position: fixed;          /* 🧲 This makes it stick at top */
+  top: 0;                   /* Keep it at top of the page */
+  width: 100%;              /* Full width */
+  z-index: 1000;            /* Keeps it above all content */
+}
 
   header h1 {
     font-size: 28px;
@@ -94,6 +99,8 @@
     transform: scale(1.05);
   }
 
+.about { padding-top: 150px; }
+
   @media (max-width: 700px) {
   .slides img {
     width: 120px;
@@ -164,7 +171,6 @@ footer .socials a:hover {
 <header>
   <h2>ZAIRUQ DESIGN STUDIO</h2>
   <p>Designs Born from Vision, Crafted with Soul</p>
-</header>
 
 <nav>
   <a href="#home">Home</a>
@@ -172,7 +178,9 @@ footer .socials a:hover {
   <a href="#about">About</a>
   <a href="#contact">Contact</a>
 </nav>
+</header>
 
+<section style="margin-top:120px;"></section>
 
 <section id="home">
 <p style="text-align:center;">
