--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
   }
 
   header {
-  background: linear-gradient(135deg, #000, #222);
-  color: gold;
-  text-align: center;
-  padding: 30px 20px;
-  box-shadow: 0 2px 10px rgba(255,215,0,0.3);
+  background: #111;
+  color: white;
+  padding: 20px;
   position: fixed;          /* 🧲 This makes it stick at top */
   top: 0;                   /* Keep it at top of the page */
   width: 100%;              /* Full width */
