--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   header {
   background: #111;
   color: white;
+  text-align: centre;
   padding: 20px;
   position: fixed;          /* 🧲 This makes it stick at top */
   top: 0;                   /* Keep it at top of the page */
@@ -183,7 +184,8 @@ style="color:#f39c12;
 text-decoration:none;">Connect on Whatsapp</a></p>
 </section>
 
-<section id="services">
+<section style="margin-top:120px;" id="services">
+
   <h2>OUR CREATIVE SERVICES</h2>
 
   <!-- 1️⃣ Visiting Card -->
