--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     background: #222;
     display: flex;
     justify-content: center;
+    align-item:center;
     gap: 30px;
     flex-wrap: wrap;
     padding: 10px 0;
