--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   header {
   background: #111;
   color: white;
-  text-align: centre;
+  text-align: center;
   padding: 20px;
   position: fixed;          /* 🧲 This makes it stick at top */
   top: 0;                   /* Keep it at top of the page */
@@ -40,7 +40,7 @@
     background: #222;
     display: flex;
     justify-content: center;
-    align-item:center;
+    align-items:center;
     gap: 30px;
     flex-wrap: wrap;
     padding: 10px 0;
