--- a/index.html
+++ b/index.html
@@ -67,9 +67,13 @@ nav a:hover {
   color: #ff7f50;
 }
 
+html {
+  scroll-padding-top: 120px;
+  scroll-behavior: smooth;
+}
 
   section {
-    padding: 30px;
+    padding: 10px;
     text-align: center;
   }
 
